# langchain

./: Makefile  docker-compose.yml  pyproject.toml
docs/: agentic_rag.md  chat_memory.md
docs/implementation/agentic-rag/: 00-overview.md  01-setup-and-dependencies.md  02-retrieval-evaluator.md  03-langgraph-agent-state.md  04-corrective-rag-logic.md  05-tavily-search-integration.md  06-integration-and-optimization.md  README.md
src/agentic_rag/: __init__.py  agent.py  config.py  corrective.py  evaluator.py  factory.py  graph.py  search.py  state.py
src/agentic_rag/evaluation/: __init__.py  metrics.py
src/conversational_rag/: __init__.py  rag_chain.py
test/: README.md  conftest.py  sample_docs.txt  test_rag.py
test/agentic_rag/: __init__.py  test_agent.py  test_benchmarks.py  test_config.py  test_corrective.py  test_evaluator.py  test_factory.py  test_graph.py  test_integration.py  test_search.py  test_state.py
